<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MobilePass SDK Test</string>
    <string name="text_status_message_succeed">You can pass now</string>
    <string name="text_status_message_failed">Pass request has been failed</string>
    <string name="text_status_message_not_connected">Could not communicate with the device</string>
    <string name="text_status_message_unauthorized">You are not authorized to pass</string>
    <string name="text_status_message_no_connection">Please check your internet connection</string>
    <string name="text_status_message_timeout">Request timed out</string>
    <string name="test_status_message_remoteaccess_timeout">Communication with device timed out</string>
    <string name="text_status_message_scanning">Scanning for nearby devices</string>
    <string name="text_status_message_connecting">Connecting…</string>
    <string name="text_status_message_waiting">Your pass request is being sent…</string>
    <string name="text_status_message_need_ble_enabled">You need to enable Bluetooth to continue</string>
    <string name="text_location_message">You must be in a defined location to continue</string>
    <string name="text_qrcode_message">Please scan the QR code of access point</string>
    <string name="text_status_message_error_empty_config">An error occurred during pass. Code: 4501</string>
    <string name="text_status_message_error_invalid_action">An error occurred during pass. Code: 4502</string>
    <string name="text_status_message_error_invalid_qrcode_content">An error occurred during pass. Code: 4503</string>
    <string name="text_status_message_error_invalid_qrcode_id">An error occurred during pass. Code: 4504</string>
    <string name="text_status_message_error_invalid_direction">An error occurred during pass. Code: 4505</string>
    <string name="text_status_message_error_invalid_hardware_id">An error occurred during pass. Code: 4506</string>
    <string name="text_status_message_error_invalid_relay_number">An error occurred during pass. Code: 4507</string>
    <string name="text_status_message_suggestion">You can pass with Bluetooth without experiencing network issues</string>
    <string name="text_status_message_suggestion_enable">Bluetooth must be enabled on your phone</string>
    <string name="text_status_message_suggestion_authorize">You need to grant Bluetooth permission to the application</string>
    <string name="img_content_powered_by_armon">Powered by armongate</string>
    <string name="img_content_status_icon">status icon</string>
    <string name="btn_label_settings">Settings</string>
    <string name="text_permission_camera">"In order to scan QR code, you need to give camera access permission to the application. You can make the necessary change by tapping the \'Settings\' button.</string>
    <string name="text_permission_ble_scan">In order to scan Bluetooth devices, you need to give permission to the application. You can make the necessary change by tapping the \'Settings\' button.</string>
    <string name="text_permission_location">You need to grant Location permission to the application. You can make the necessary change by tapping the \'Settings\' button.</string>
    <string name="text_permission_location_service">Location services must be turned on for this. You can re-scan the QR code after activating the location service by tapping the \'Settings\' button or from the control center.</string>
    <string name="text_qrcode_list_state_initializing">QR code list is being prepared</string>
    <string name="text_qrcode_list_state_syncing">Updating QR code list</string>
    <string name="text_qrcode_list_state_empty">There is no QR code definition</string>
    <string name="text_qrcode_list_state_synced_data">QR code list is up to date</string>
    <string name="text_qrcode_list_state_stored_data">Failed to update QR code list</string>
    <string name="text_qrcode_list_tap_to_refresh">Tap to refresh list</string>
    <string name="text_qrcode_not_found">QR code not found!</string>
    <string name="text_qrcode_invalid">QR code definition is invalid!</string>
    <string name="text_qrcode_unknown">Invalid QR code format</string>
    <string name="accessibility_switch_camera">Switch camera</string>
    <string name="accessibility_qr_code_message">QR code scanning instructions</string>
    <string name="accessibility_list_state">QR code list status</string>
    <string name="error_camera_permission">Camera permission is required to scan QR codes</string>
    <string name="error_camera_setup">Failed to setup camera</string>
    <string name="accessibility_refresh_list">Refresh QR code list</string>
    <string name="accessibility_camera_preview">Camera preview</string>
</resources>
