<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragment.StatusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/armon_mp_imgStatusIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:contentDescription="@string/img_content_status_icon"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/success" />

        <TextView
            android:id="@+id/armon_mp_txtStatusMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center|top"
            android:minHeight="48dp"
            android:text="@string/text_status_message_succeed"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/armon_mp_txtBLESuggestionMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/text_status_message_suggestion"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/armon_mp_txtBLESuggestionActionMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/text_status_message_suggestion_enable"
            android:textColor="@color/orange"
            android:textSize="12sp" />

        <Button
            android:id="@+id/armon_mp_btnBLESuggestionSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:minWidth="150dp"
            android:text="@string/btn_label_settings" />
    </LinearLayout>

    <ImageView
        android:id="@+id/armon_mp_imgStatusPoweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/img_content_powered_by_armon"
        android:src="@drawable/logo_colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>