<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFFFFF"
	tools:context=".fragment.QRCodeReaderFragment">

	<SurfaceView
		android:id="@+id/armon_mp_qrSurfaceView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintBottom_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/armon_mp_qrMaskBottom"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="@color/qrcode_mask"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHeight_percent="0.35"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent" />

	<View
		android:id="@+id/armon_mp_qrMaskTop"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="@color/qrcode_mask"
		app:layout_constraintHeight_percent="0.35"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/armon_mp_qrMaskLeft"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:background="@color/qrcode_mask"
		app:layout_constraintWidth_percent="0.2"
		app:layout_constraintHeight_percent="0.3"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="@id/armon_mp_qrMaskTop"
		app:layout_constraintBottom_toBottomOf="@id/armon_mp_qrMaskBottom"/>

	<View
		android:id="@+id/armon_mp_qrMaskRight"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:background="@color/qrcode_mask"
		app:layout_constraintWidth_percent="0.2"
		app:layout_constraintHeight_percent="0.3"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@id/armon_mp_qrMaskTop"
		app:layout_constraintBottom_toBottomOf="@id/armon_mp_qrMaskBottom"/>


	<TextView
		android:id="@+id/armon_mp_txtQRInfoMessage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="12dp"
		android:layout_marginRight="12dp"
		android:gravity="center"
		android:paddingLeft="24dp"
		android:paddingRight="24dp"
		android:text="@string/text_qrcode_message"
		android:textColor="@color/white"
		android:textSize="14sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@id/armon_mp_qrMaskTop"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@id/armon_mp_qrMaskTop" />

	<TextView
		android:id="@+id/armon_mp_txtListStateInfo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="12dp"
		android:layout_marginRight="12dp"
		android:gravity="center"
		android:paddingLeft="24dp"
		android:paddingRight="24dp"
		android:text="@string/text_qrcode_list_state_initializing"
		android:textColor="@color/white"
		android:textSize="11sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@id/armon_mp_imgQRCodePoweredBy"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@id/armon_mp_qrMaskBottom" />

	<ImageView
		android:id="@+id/armon_mp_imgQRCodePoweredBy"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="24dp"
		android:contentDescription="@string/img_content_powered_by_armon"
		app:layout_constraintBottom_toBottomOf="@id/armon_mp_qrMaskBottom"
		app:layout_constraintLeft_toLeftOf="@id/armon_mp_qrMaskBottom"
		app:layout_constraintRight_toRightOf="@id/armon_mp_qrMaskBottom"
		app:srcCompat="@drawable/poweredby_white" />

</androidx.constraintlayout.widget.ConstraintLayout>