<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HuaweiQRCodeReaderActivity">

    <FrameLayout
        android:id="@+id/armon_mp_hms_rim"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <View
        android:id="@+id/armon_mp_hms_qrMaskBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/qrcode_mask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/armon_mp_hms_qrMaskTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/qrcode_mask"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/armon_mp_hms_qrMaskLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/qrcode_mask"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/armon_mp_hms_qrMaskTop"
        app:layout_constraintBottom_toBottomOf="@id/armon_mp_hms_qrMaskBottom"/>

    <View
        android:id="@+id/armon_mp_hms_qrMaskRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/qrcode_mask"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/armon_mp_hms_qrMaskTop"
        app:layout_constraintBottom_toBottomOf="@id/armon_mp_hms_qrMaskBottom"/>


    <TextView
        android:id="@+id/armon_mp_hms_txtQRInfoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/text_qrcode_message"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/armon_mp_hms_qrMaskTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/armon_mp_hms_qrMaskTop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/armon_mp_hms_imgQRCodePoweredBy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/armon_mp_hms_qrMaskBottom">

        <!-- <ImageView
            android:id="@+id/armon_mp_hms_btnSwitchCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:maxWidth="32dp"
            android:maxHeight="32dp"
            android:src="@drawable/ic_baseline_flip_camera_ios_36"
            android:visibility="visible" /> -->

        <TextView
            android:id="@+id/armon_mp_hms_txtListStateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/text_qrcode_list_state_initializing"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/armon_mp_hms_txtListRefreshInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/text_qrcode_list_tap_to_refresh"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/armon_mp_hms_txtQRCodeContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/armon_mp_hms_imgQRCodePoweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:src="@drawable/poweredby_white"
        android:contentDescription="@string/img_content_powered_by_armon"
        app:layout_constraintBottom_toBottomOf="@id/armon_mp_hms_qrMaskBottom"
        app:layout_constraintLeft_toLeftOf="@id/armon_mp_hms_qrMaskBottom"
        app:layout_constraintRight_toRightOf="@id/armon_mp_hms_qrMaskBottom"
        app:srcCompat="@drawable/poweredby_white" />

</androidx.constraintlayout.widget.ConstraintLayout>